--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 		<li data-timeline-node="{start:'2023-06-16 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">HPDC* 2023</strong><p class="event-content">CCF Rank: B, When: Jun 16-23, 2023, Abstract Deadline: 2023-01-20 23:59:59 -12:00, Submission Deadline: 2023-01-27 23:59:59 -12:00, Notification Due: 2023-03-31</p></li>
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS-2 2023</strong><p class="event-content">CCF Rank: B, When: Jun 19-23, 2023, Abstract Deadline: 2022-10-12, Submission Deadline: 2022-10-19, Notification Due: 2022-12-20</p></li>
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS-3 2023</strong><p class="event-content">CCF Rank: B, When: Jun 19-23, 2023, Abstract Deadline: 2023-01-25, Submission Deadline: 2023-02-01, Notification Due: 2023-03-28</p></li>
-		<li data-timeline-node="{start:'2023-05-14 00:00:00',end:'2023-05-20 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICSE 2023</strong><p class="event-content">CCF Rank: A, When: May 14-20, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-09-01 23:59:59 -12:00, Notification Due: 2022-12-09</p></li>
 		<li data-timeline-node="{start:'2023-07-10 00:00:00',end:'2023-07-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">OSDI 2023</strong><p class="event-content">CCF Rank: A, When: Jul 10-12, 2023, Abstract Deadline: 2022-12-06 22:59:00 &#43;00:00, Submission Deadline: 2022-12-13 22:59:00 &#43;00:00, Notification Due: 2022-03-23</p></li>
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PLDI 2023</strong><p class="event-content">CCF Rank: A, When: Jun 19-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-11-10, Notification Due: 2023-02-23</p></li>
 		<li data-timeline-node="{start:'2023-10-23 00:00:00',end:'2023-10-26 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SOSP* 2023</strong><p class="event-content">CCF Rank: A, When: Oct 23-26, 2023, Abstract Deadline: 2023-04-30 02:59:59 -07:00, Submission Deadline: 2023-05-07 02:59:59 -07:00, Notification Due: 2023-08-09</p></li>
@@ -136,20 +135,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://conf.researchr.org/home/icse-2023" target="_blank">ICSE 2023</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Sep 1, 2022</td>
-							<td>Dec 9, 2022</td>
-							<td>May 14-20, 2023</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://mlsys.org/" target="_blank">SysML 2023</a>
@@ -357,6 +342,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://conf.researchr.org/home/icse-2023" target="_blank">ICSE 2023</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Sep 1, 2022</td>
+							<td>Dec 9, 2022</td>
+							<td>May 14-20, 2023</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="http://www.ipdps.org/" target="_blank">IPDPS 2023</a>
@@ -818,7 +817,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 20, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 21, 2023.</p>
 		</div>
 	</div>
 
