--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 		<li data-timeline-node="{start:'2023-10-23 00:00:00',end:'2023-10-26 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SOSP* 2023</strong><p class="event-content">CCF Rank: A, When: Oct 23-26, 2023, Abstract Deadline: 2023-04-30 02:59:59 -07:00, Submission Deadline: 2023-05-07 02:59:59 -07:00, Notification Due: 2023-08-09</p></li>
 		<li data-timeline-node="{start:'2023-06-18 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMOD-3 2023</strong><p class="event-content">CCF Rank: A, When: Jun 18-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-15, Notification Due: 2023-02-23</p></li>
 		<li data-timeline-node="{start:'2023-08-28 00:00:00',end:'2023-09-01 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">VLDB* 2023</strong><p class="event-content">CCF Rank: A, When: Aug 28-Sep 1, 2023, Abstract Deadline: 2023-02-20, Submission Deadline: 2023-03-01, Notification Due: 2023-04-15</p></li>
-		<li data-timeline-node="{start:'2023-06-04 00:00:00',end:'2023-06-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SysML 2023</strong><p class="event-content">CCF Rank: , When: Jun 4-8, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-28 19:59:59, Notification Due: 2023-02-17</p></li>
 	    </ul>
 	</div>
 
@@ -135,20 +134,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://mlsys.org/" target="_blank">SysML 2023</a>
-							</th>
-							<td></td>
-							<td>N/A</td>
-							<td>Oct 28, 2022</td>
-							<td>Feb 17, 2023</td>
-							<td>Jun 4-8, 2023</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="http://spaa.acm.org/" target="_blank">SPAA 2023</a>
@@ -342,6 +327,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://mlsys.org/" target="_blank">SysML 2023</a>
+							</th>
+							<td></td>
+							<td>N/A</td>
+							<td>Oct 28, 2022</td>
+							<td>Feb 17, 2023</td>
+							<td>Jun 4-8, 2023</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://conf.researchr.org/home/icse-2023" target="_blank">ICSE 2023</a>
@@ -817,7 +816,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jun 4, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jun 9, 2023.</p>
 		</div>
 	</div>
 
