--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 							<td>Mar 28, 2023</td>
 							<td>Jun 19-23, 2023</td>
 							<td>
-								<div data-countdown="2023-06-19 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -214,7 +214,7 @@
 							<td>Mar 30, 2023</td>
 							<td>Jun 19-23, 2023</td>
 							<td>
-								<div data-countdown="2023-06-19 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -228,7 +228,7 @@
 							<td>Feb 23, 2023</td>
 							<td>Jun 19-23, 2023</td>
 							<td>
-								<div data-countdown="2023-06-19 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -242,7 +242,7 @@
 							<td>Dec 20, 2022</td>
 							<td>Jun 19-23, 2023</td>
 							<td>
-								<div data-countdown="2023-06-19 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -816,7 +816,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jun 18, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jun 19, 2023.</p>
 		</div>
 	</div>
 
